--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  jekyll
 # Build settings
 
 markdown: kramdown
-theme: jekyll-theme-hyde
+remote_theme: jekyll-theme-hyde
 plugins:
   - jekyll-feed
   - jekyll-paginate
