--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Junior Software Developer and IT professional who
   like to solve the complex issue in a creative way.
   I have a background in Sound engineering.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "docker_documenting" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
