--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: CCT Pi-Cloud Docker Explanation.
 email: loveandpeace.jin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Documenting of Group project - Pi Cloud - of CCT. 
+  Documenting of Group project - Pi Cloud - of CCT.
 baseurl: "docker_documenting" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://rbwtp.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
 
