--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: CCT Pi-Cloud Docker Explanation.
 email: loveandpeace.jin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Documenting of Group project - Pi Cloud - of CCT.
+  Documenting of Group project - Pi Cloud - of CCT. Yoseph Buitrago | Jin Lim | Ryan | Patty 
 baseurl: "docker_documenting" # the subpath of your site, e.g. /blog
 url: "https://rbwtp.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
